# LBFGS-blaze

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: lbfgs.hpp
src/: lbfgs_example.cpp
